--- a/css_styling/avail.html
+++ b/css_styling/avail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WellFit - Avail Packages</title>
-    <link rel="stylesheet" href="/avail.css">
+    <link rel="stylesheet" href="./avail.css">
     <style>
         /* Hide the thank you message by default */
         #thank-you {
@@ -71,5 +71,48 @@
       thankYouMessage.style.display = 'block'; // Show the thank you message
     });
   </script>
+                  <footer>
+                    <div class="container-footer">
+                        <div>
+                            <h2>Check Out</h2>
+                            <ul>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./Home.html.container-who" target="_blank">Branches of Welfit</a></li>
+                                <li><a href="https://www.youtube.com/watch?v=fcN37TxBE_s" target="_blank">Press & Blog</a></li>
+                                <li><a href="https://www.okoessentials.com.sg/pages/privacy-policy?gclid=CjwKCAjw4ZWkBhA4EiwAVJXwqRyWrSG-9Ze-NXEgv8NEtsKe1xXL_Oy4RK9V8UgCa1JAvmlg8wFJYxoC0nsQAvD_BwE" target="_blank">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h2>Quick Links</h2>
+                            <ul>
+                                <li><a href="./Home.html">Back to Home</a></li>
+                                <li><a href="./wellness_packages.html">Wellness packages</a></li>
+                                <li><a href="./about.html">About Welfit</a></li>
+                                <li><a href="./avail.html">Our packages</a></li>
+                                <li><a href="./Home.html">Feedbacks</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h2>Newsletter</h2>
+                            <form>
+                                <input type="text" placeholder="Enter your text" />
+                                <button>Search</button>
+                            </form>
+                            <!-- <p class="footer-copyright">© Isaiah Essien 2023- i.essien@alustudent.com</p> -->
+                        </div>
+                        <div class="social-links">
+                            <h2>Check our Socials</h2>
+                            <i class="fa fa-facebook"></i>
+                            <i class="fa fa-twitter"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin"></i>
+                            <i class="fa fa-snapchat"></i>
+                            <i class="fa fa-youtube-play"></i>
+                        </div>
+                    </div>
+                    <!-- <div class="footer-copyright">
+                        <p>© html/css-contest G4- Original Tech Broes 2023</p>
+                    </div> -->
+                </footer>
 </body>
 </html>
