--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -19,6 +19,7 @@
     <a href="./Home.html"><img src="./media/images_and_Videos/logo.png" class="logo"></a>
     <div class="banner-text">
         <h1>WELLNESS PACKAGES</h1>
+        <p>We provide your wellness program all year-round <br>because we believe that personal health and well-being is a lifelong journey.</p>
         <div class="banner-btn">
             <a href="#nutrition"><span></span>Nutrition</a>
             <a href="#fitness"><span></span>Fitness</a>
@@ -30,10 +31,11 @@
 <div id="sideNav">
     <nav>
         <ul>
-            <li><a href="Home.html">HOME</a></li>
-            <li><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
-            <li><a href="about.html">ABOUT US</a></li>
-            <li><a href="avail.html">AVAIL PACKAGES</a></li>
+            <li class="nav-item"><a href="Home.html">HOME</a></li>
+            <li class="nav-item"><a href="wellness_packages.html">WELLNESS PACKAGES</a></li>
+            <li class="nav-item"><a href="about.html">ABOUT US</a></li>
+            <li class="nav-item"><a href="avail.html">AVAILABLE PACKAGES</a></li>
+            <li class="nav-item"><a href="#footer">CONTACT US</a></li>
         </ul>
     </nav>
 </div>
@@ -153,7 +155,7 @@
                     </section>
                     
                 </section>
-                <footer>
+                <footer id="footer">
                     <div class="container-footer">
                         <div>
                             <h2>Check Out</h2>
@@ -209,11 +211,11 @@
     menuBtn.onclick = function(){
         if(sideNav.style.right == "-250px"){
             sideNav.style.right = "0";
-            menu.src ="/media/images_and_Videos/close.png";
+            menu.src ="./media/images_and_Videos/close.png";
         }
         else{
         sideNav.style.right ="-250px";
-        menu.src ="/media/images_and_Videos/menu.png";
+        menu.src ="./media/images_and_Videos/menu.png";
         }
     }
 
