Revert "web_dev"
This reverts commit adebdcce3046ea6975feeaec6d2fa65490f103fd.

--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WellFit</title>
-        <link rel="stylesheet" href="./home.css">
+        <link rel="stylesheet" href="/home.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,11 +32,11 @@
         <div id="sideNav">
             <nav>
                 <ul>
-                    <li class="nav-item"><a href="./Home.html">HOME</a></li>
-                    <li class="nav-item"><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
-                    <li class="nav-item"><a href="./about.html">ABOUT US</a></li>
-                    <li class="nav-item"><a href="./avail.html">AVAILABLE PACKAGES</a></li>
-                    <li class="nav-item"><a href="#footer">CONTACT US</a></li>
+                    <li><a href="./Home.html">HOME</a></li>
+                    <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
+                    <li><a href="./about.html">ABOUT US</a></li>
+                    <li><a href="./avail.html">AVAILABLE PACKAGES</a></li>
+                    <li><a href="#footer">CONTACT US</a></li>
                 </ul>
             </nav>
         </div>
@@ -106,14 +106,14 @@
                     </div>
                 </div>
                 <div class="aim-img">
-                    <img src="./media/images_and_Videos/pexels-lisa-fotios-1172019.jpg">
-                    <img src="./media/images_and_Videos/pexels-cliff-booth-4058411.jpg" alt="">
+                    <img src="/media/images_and_Videos/pexels-lisa-fotios-1172019.jpg">
+                    <img src="/media/images_and_Videos/pexels-cliff-booth-4058411.jpg" alt="">
                 </div>
             </div>
         </section>
 
 <!--Here comes Mister foot-->
-    <footer id="footer">
+    <footer>
         <div class="container-footer">
             <div>
                 <h2>Check Out</h2>
@@ -127,11 +127,11 @@
             <div>
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="./Home.html">Back to Home</a></li>
-                    <li><a href="./wellness_packages.html">Wellness packages</a></li>
-                    <li><a href="./about.html">About Welfit</a></li>
-                    <li><a href="./avail.html">Our packages</a></li>
-                    <li><a href="./Home.html">Feedbacks</a></li>
+                    <li><a href="/Home.html">Back to Home</a></li>
+                    <li><a href="/wellness_packages.html">Wellness packages</a></li>
+                    <li><a href="/about.html">About Welfit</a></li>
+                    <li><a href="/avail.html">Our packages</a></li>
+                    <li><a href="/Home.html">Feedbacks</a></li>
                 </ul>
             </div>
             <div>
@@ -168,11 +168,11 @@
         menuBtn.onclick = function(){
             if(sideNav.style.right == "-250px"){
                 sideNav.style.right = "0";
-                menu.src ="./media/images_and_Videos/close.png";
+                menu.src ="/media/images_and_Videos/close.png";
             }
             else{
             sideNav.style.right ="-250px";
-            menu.src ="./media/images_and_Videos/menu.png";
+            menu.src ="/media/images_and_Videos/menu.png";
             }
         }
 
