--- a/css_styling/about.html
+++ b/css_styling/about.html
@@ -18,8 +18,8 @@
             <img src="./media/images_and_Videos/logo.png" alt="logo" class="logo">
         </a>
         <!-- Title -->
-        <div class="banner-text">
-            <h1>ABOUT WELL FIT</h1>
+        <div class="about-text">
+            <h2>ABOUT WELLFIT</h2>
         </div>
     </section>
     <!-- side Navigation section -->
@@ -27,11 +27,10 @@
         <div id="sideNav">
             <nav>
                 <ul>
-                    <li class="nav-item"><a href="./Home.html">HOME</a></li>
-                    <li class="nav-item"><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
-                    <li class="nav-item"><a href="./about.html">ABOUT US</a></li>
-                    <li class="nav-item"><a href="./avail.html">AVAILABLE PACKAGES</a></li>
-                    <li class="nav-item"><a href="#footer">CONTACT US</a></li>
+                    <li><a href="./Home.html">HOME</a></li>
+                    <li><a href="./wellness_packages.html">WELLNESS PACKAGES</a></li>
+                    <li><a href="./about.html">ABOUT US</a></li>
+                    <li><a href="./avail.html">AVAILABLE PACKAGES</a></li>
                 </ul>
             </nav>
         </div>
@@ -106,7 +105,7 @@
             </div>
         </div>
     </section>
-    <footer id="footer">
+    <footer>
         <div class="container-footer">
             <div>
                 <h2>Check Out</h2>
@@ -145,31 +144,34 @@
                 <i class="fa fa-youtube-play"></i>
             </div>
         </div>
+        <!-- <div class="footer-copyright">
+            <p>© html/css-contest G4- Original Tech Broes 2023</p>
+        </div> -->
     </footer>
-    <!-- <div class="footer-copyright">
-        <p>© html/css-contest G4- Original Tech Broes 2023</p>
-    </div> -->
     <!--A little script for the menu and side nav. Nothing too serious-->
-    <script>
-    var menuBtn = document.getElementById("menuBtn");
-    var sideNav = document.getElementById("sideNav");
-    var menu = document.getElementById("menu");
+<script>
+    var menuBtn = document.getElementById("menuBtn")
+    var sideNav = document.getElementById("sideNav")
+    var menu = document.getElementById("menu")
 
-    sideNav.style.right = "-250px";
+    sideNav.style.right ="-250px"
 
-    menuBtn.onclick = function() {
-        if (sideNav.style.right == "-250px") {
-        sideNav.style.right = "0";
-        menu.src = "./media/images_and_Videos/close.png";
-        } else {
-        sideNav.style.right = "-250px";
-        menu.src = "./media/images_and_Videos/menu.png";
+    menuBtn.onclick = function(){
+        if(sideNav.style.right == "-250px"){
+            sideNav.style.right = "0";
+            menu.src ="./media/images_and_Videos/close.png";
         }
-    };
-        var scroll = new SmoothScroll('a[href*="#"]', {
-            speed: 700,
-            speedAsDuration: true
-        });
-    </script>
+        else{
+        sideNav.style.right ="-250px";
+        menu.src ="./media/images_and_Videos/menu.png";
+        }
+    }
+
+var scroll = new SmoothScroll('a[href*="#"]', {
+    speed: 700,
+    speedAsDuration: true
+});
+
+</script
 </body>
 </html>
