worked on the about us section and the footer

--- a/css_styling/about.html
+++ b/css_styling/about.html
@@ -107,7 +107,7 @@
     </section>
     <footer>
         <div class="container-footer">
-            <div>
+            <div class="section1">
                 <h2>Check Out</h2>
                 <ul>
                     <li><a href="/about.html">About Us</a></li>
@@ -116,7 +116,7 @@
                     <li><a href="https://www.okoessentials.com.sg/pages/privacy-policy?gclid=CjwKCAjw4ZWkBhA4EiwAVJXwqRyWrSG-9Ze-NXEgv8NEtsKe1xXL_Oy4RK9V8UgCa1JAvmlg8wFJYxoC0nsQAvD_BwE" target="_blank">Privacy Policy</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="section2">
                 <h2>Quick Links</h2>
                 <ul>
                     <li><a href="/Home.html">Back to Home</a></li>
@@ -126,7 +126,7 @@
                     <li><a href="/Home.html">Feedbacks</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="section3">
                 <h2>Newsletter</h2>
                 <form>
                     <input type="text" placeholder="Enter your text" />
@@ -136,12 +136,14 @@
             </div>
             <div class="social-links">
                 <h2>Check our Socials</h2>
+                <div class="linkse">
                 <i class="fa fa-facebook"></i>
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-instagram"></i>
                 <i class="fa fa-linkedin"></i>
                 <i class="fa fa-snapchat"></i>
                 <i class="fa fa-youtube-play"></i>
+            </div>
             </div>
         </div>
         <!-- <div class="footer-copyright">
