--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WellFit</title>
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="hom.css">
         <link rel="stylesheet" href="wellness_packages.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,7 +105,7 @@
                             </p>
                             </div>               
                             <section class="fpack1">
-                                <div class="container2">
+                                <div class="container5">
 
                                     <div class="img-section">
                                         <img src="./media/images_and_Videos/fit1.jpg" alt="Nutrition">
@@ -122,7 +122,7 @@
                                 </div>
                             </section>
                             <section class="fpack2">
-                                <div class="container3">
+                                <div class="container6">
                             <div class="img-section">
                                 <img src="./media/images_and_Videos/fit2.jpg" alt="Nutrition">
                             </div>
@@ -137,7 +137,7 @@
                         </div>
                         </section>
                         <section class="fpack3">
-                            <div class="container3">
+                            <div class="container7">
                             <div class="img-section">
                                 <img src="./media/images_and_Videos/fit3.jpg" alt="Nutrition">
                             </div>
