--- a/css_styling/wellness_packages.html
+++ b/css_styling/wellness_packages.html
@@ -209,11 +209,11 @@
     menuBtn.onclick = function(){
         if(sideNav.style.right == "-250px"){
             sideNav.style.right = "0";
-            menu.src ="/media/images_and_Videos/close.png";
+            menu.src ="./media/images_and_Videos/close.png";
         }
         else{
         sideNav.style.right ="-250px";
-        menu.src ="/media/images_and_Videos/menu.png";
+        menu.src ="./media/images_and_Videos/menu.png";
         }
     }
 
@@ -221,6 +221,7 @@ var scroll = new SmoothScroll('a[href*="#"]', {
     speed: 700,
     speedAsDuration: true
 });
-</script>
+
+</script
 </body>
 </html>
