--- a/css_styling/Home.html
+++ b/css_styling/Home.html
@@ -58,7 +58,7 @@
                         and our aim is to support you in achieving optimal well-being. 
                         With WellFit Life, you can elevate your remote wellness and thrive in both your personal and professional life.
                     </p>
-                    <a href="/about.html" class="button">Read More</a>
+                    <a href="/css_styling/about.html" class="button">Read More</a>
                 </div>
             </div>
         </section>
@@ -158,29 +158,29 @@
     </footer>
 
 <!--A little script for the menu and side nav. Nothing too serious-->
-    <script>
-        var menuBtn = document.getElementById("menuBtn")
-        var sideNav = document.getElementById("sideNav")
-        var menu = document.getElementById("menu")
+<script>
+    var menuBtn = document.getElementById("menuBtn")
+    var sideNav = document.getElementById("sideNav")
+    var menu = document.getElementById("menu")
 
-        sideNav.style.right ="-250px"
+    sideNav.style.right ="-250px"
 
-        menuBtn.onclick = function(){
-            if(sideNav.style.right == "-250px"){
-                sideNav.style.right = "0";
-                menu.src ="/media/images_and_Videos/close.png";
-            }
-            else{
-            sideNav.style.right ="-250px";
-            menu.src ="/media/images_and_Videos/menu.png";
-            }
+    menuBtn.onclick = function(){
+        if(sideNav.style.right == "-250px"){
+            sideNav.style.right = "0";
+            menu.src ="./media/images_and_Videos/close.png";
         }
+        else{
+        sideNav.style.right ="-250px";
+        menu.src ="./media/images_and_Videos/menu.png";
+        }
+    }
 
-    var scroll = new SmoothScroll('a[href*="#"]', {
-        speed: 700,
-        speedAsDuration: true
-    });
+var scroll = new SmoothScroll('a[href*="#"]', {
+    speed: 700,
+    speedAsDuration: true
+});
 
-    </script>
+</script
     </body>
 </html>
